<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/login_bg_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp">
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/login_bg_layout"
        android:layout_marginBottom="-56dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="normal"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_emailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/_login"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_passwordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_emailContainer"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColorHint="@color/black"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:drawableEnd="@drawable/ic_eye"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_passwordContainer"
        android:text="@string/Login"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_marginStart="30dp"
        android:padding="12dp"
        android:background="@drawable/bg_button"/>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:text="@string/dontHaveAnAccaunt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"/>

</RelativeLayout>